# bigquery-agents

./: README.md  pyproject.toml
bigquery_agents/: bq_job_troubleshoot_basic.py  bq_job_troubleshoot_w_schema_lookup.py  fix.py
src/bigquery_agents/: bq_medic.py
src/bigquery_agents/bq_fix/: __main__.py
src/bigquery_agents/bq_fix_basic/: __main__.py
