[project]
name = "bigquery-agents"
version = "0.1.0"
description = ""
authors = [
    {name = "sametkaradag",email = "sametkaradag@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "google-cloud-bigquery (>=3.29.0,<4.0.0)",
    "langchain (>=0.3.17,<0.4.0)",
    "langgraph (>=0.2.69,<0.3.0)",
    "langchain-google-vertexai (>=2.0.12,<3.0.0)",
    "ipython (>=8.31.0,<9.0.0)",
]

[tool.poetry.scripts]
bq_fix_basic = "bq_job_troubleshoot_basic:main"
bq_fix = "bq_job_troubleshoot_w_schema_lookup:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
